--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <div class="lg:w-21/25">
                                 <a href="projects/sandstrasse.html">
                                     <div class="relative parallax fade-in" style="padding-bottom: 58.325581395349%">
-                                        <img class="js-show-cursor cursor-none absolute inset-0 w-full h-full object-cover" data-cursor-type="view" src="assets/img/projects/sandstrasse/outdoors01.jpg" alt="AnimatedSpreads" sizes="(max-width: 600px) 480px, 100vw" srcset="assets/img/projects/sandstrasse/outdoors01.jpg 1075w, assets/img/projects/sandstrasse/outdoors01.jpg 329w">
+                                        <img class="js-show-cursor cursor-none absolute inset-0 w-full h-full object-cover" data-cursor-type="view" src="assets/img/projects/sandstrasse/indoors01.jpg" alt="AnimatedSpreads" sizes="(max-width: 600px) 480px, 100vw" srcset="assets/img/projects/sandstrasse/outdoors01.jpg 1075w, assets/img/projects/sandstrasse/outdoors01.jpg 329w">
                                     </div>
 
                                 </a>
@@ -330,11 +330,12 @@
                                     <div><span>An</span></div>
                                     <div><span>insight-led</span></div>
                                     <div><span>design</span></div>
-                                    <div><span>studio.</span></div>
+                                    <div><span>bureau</span></div>
+                                    <div><span>real-estate.</span></div>
                                 </div>
                             </div>
                             <p class="type-base mt-7 md:max-w-xl fade-in" data-delay="0.1">
-                                We define, explore, then refine, to produce work that is more beautiful, functional and meaningful.
+                                We work with you to get the home you have always wanted.
                             </p>
                         </div>
                     </div>
@@ -344,27 +345,22 @@
                                 <div class="swiper-slide w-4/5 md:w-2/6 mr-12 md:mr-18 lg:mr-28">
                                     <picture>
                                         <source srcset="/assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                                        <img src="assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
+                                        <img src="assets/img/team/team01.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide w-4/5 md:w-2/6 mr-12 md:mr-18 lg:mr-28">
                                     <picture>
-                                        <source srcset="/assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                                        <img src="assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
+                                        <source srcset="assets/img/team/team02.jpg" media="(min-width: 640px)">
+                                        <img src="assets/img/team/team02.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide w-4/5 md:w-2/6 mr-12 md:mr-18 lg:mr-28">
                                     <picture>
-                                        <source srcset="/assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                                        <img src="assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
+                                        <source srcset="assets/img/team/team03.jpg" media="(min-width: 640px)">
+                                        <img src="assets/img/team/team03.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
                                     </picture>
                                 </div>
-                                <div class="swiper-slide w-4/5 md:w-2/6 mr-12 md:mr-18 lg:mr-28">
-                                    <picture>
-                                        <source srcset="/assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                                        <img src="assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
-                                    </picture>
-                                </div>
+
                             </div>
                         </div>
                         <img src="assets/img/made-in-winchester--white.svg" class="js-rotate-stamp hidden md:block absolute top-0 right-0 z-20 w-44 h-44 pointer-events-none -mt-16 mr-64" alt="made in winchester">
