--- a/index.html
+++ b/index.html
@@ -330,12 +330,13 @@
                                     <div><span>An</span></div>
                                     <div><span>insight-led</span></div>
                                     <div><span>design</span></div>
-                                    <div><span>bureau</span></div>
-                                    <div><span>real-estate.</span></div>
+
+                                    <div><span>real-estate</span></div>
+                                    <div><span>bureau.</span></div>
                                 </div>
                             </div>
                             <p class="type-base mt-7 md:max-w-xl fade-in" data-delay="0.1">
-                                We work with you to get the home you have always wanted.
+                                This is our team, and we will work with you to get the home you have always wanted.
                             </p>
                         </div>
                     </div>
@@ -344,7 +345,7 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide w-4/5 md:w-2/6 mr-12 md:mr-18 lg:mr-28">
                                     <picture>
-                                        <source srcset="/assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
+                                        <source srcset="assets/img/team/team01.jpg" media="(min-width: 640px)">
                                         <img src="assets/img/team/team01.jpg" class="w-full transition-all duration-700" alt="thursdaystudio about 2">
                                     </picture>
                                 </div>
@@ -398,12 +399,12 @@
                                     </a>
                                     <h3 class="hidden md:block type-xl">
                                         <a href="latest/the-home-of-thursday.html">
-        The home of Thursday
+        The home of Euphorie AG
       </a>
                                     </h3>
                                     <h3 class="block md:hidden type-lg">
                                         <a href="latest/the-home-of-thursday.html">
-        The home of Thursday
+                                            The home of Euphorie AG
       </a>
                                     </h3>
                                     <a href="latest/the-home-of-thursday.html" class="hidden md:block type-xl text-grey-500 mb-16">
@@ -426,32 +427,8 @@
       Listen Now
     </a>
                                 </div>
-                                <div class="swiper-slide w-full mr-12">
-                                    <a href="latest/strategist.html" class="delay__image-wrapper hover-scale-image__wrapper relative block mb-14">
-                                        <img class="w-full delay__image hover-scale-image" src="assets/img/resized/post-thumbnail/frame-25.png" />
-                                    </a>
-                                    <h3 class="type-lg">
-                                        <a href="latest/strategist.html">
-        Job Opening: Strategist
-      </a>
-                                    </h3>
-                                    <a href="latest/strategist.html" class="type-base mb-16 block">
-      Read more
-    </a>
-                                </div>
-                                <div class="swiper-slide w-full mr-12">
-                                    <a href="latest/hiring-full-stack-developer.html" class="delay__image-wrapper hover-scale-image__wrapper relative block mb-14">
-                                        <img class="w-full delay__image hover-scale-image" src="assets/img/resized/post-thumbnail/frame-29.png" />
-                                    </a>
-                                    <h3 class="type-lg">
-                                        <a href="latest/hiring-full-stack-developer.html">
-        Job Opening: Full Stack Developer
-      </a>
-                                    </h3>
-                                    <a href="latest/hiring-full-stack-developer.html" class="type-base mb-16 block">
-      Read more
-    </a>
-                                </div>
+
+
                                 <div class="swiper-slide w-full mr-12">
                                     <a href="latest/dba-winners.html" class="delay__image-wrapper hover-scale-image__wrapper relative block mb-14">
                                         <img class="w-full delay__image hover-scale-image" src="assets/img/resized/post-thumbnail/cfa-thurs-thumb2.png" />
@@ -471,7 +448,7 @@
                                     </a>
                                     <h3 class="type-lg">
                                         <a href="events/no-more-bullsht.html">
-        Thursday Thoughts
+        Random Thoughts
       </a>
                                     </h3>
                                     <a href="events/no-more-bullsht.html" class="type-base mb-16 block">
@@ -504,7 +481,8 @@
                                     </a>
                                     <h3 class="hidden md:block type-xl">
                                         <a href="latest/the-home-of-thursday.html">
-        The home of Thursday
+      The home of Euphorie AG
+      
       </a>
                                     </h3>
                                     <h3 class="block md:hidden type-lg">
