--- a/events/no-more-bullsht.html
+++ b/events/no-more-bullsht.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from thursday.studio/events/no-more-bullsht by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jul 2021 09:58:07 GMT -->
-<!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-<!-- /Added by HTTrack -->
+
 
 <head>
     <meta charset="utf-8">
@@ -13,11 +11,10 @@
     <meta name="description" content="We are now living in the Attention Economy, where brands fight for attention and the level of noise for users is almost overwhelming. This talk explores ke...">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../assets/css/app30f1.css?id=afbd1187e554b02f528f">
+    <link rel="stylesheet" href="../assets/css/app30f1.css">
     <meta name="csrf-token" content="nkzgrYLewCvdRws2WPZgQ7IgJskxKiiwGPcjZu4u">
     <meta name="recaptcha-key" content="6LcsJ90ZAAAAAK796fkJyLP4AE4dORLStGi05n4e">
-    <meta property="og:title" content="No More Bullsh*t | Thursday">
-    <meta property="og:description" content="We are now living in the Attention Economy, where brands fight for attention and the level of noise for users is almost overwhelming. This talk explores ke...">
+    <meta property="og:title" content="No More Bullsh*t | Launching our new site!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="no-more-bullsht.html">
     <meta property="og:image" content="../assets/img/resized/opengraph/asset-80-1.jpg">
@@ -27,22 +24,7 @@
     <link rel="manifest" href="../site.html">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-TX48F6W');
-    </script>
+
 </head>
 
 <body>
@@ -296,9 +278,8 @@
             </div>
         </div>
     </div>
-    <script src="../assets/js/app9004.js?id=22d8d5e31648de9089e6"></script>
+    <script src="../assets/js/app9004.js"></script>
 </body>
 
-<!-- Mirrored from thursday.studio/events/no-more-bullsht by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jul 2021 09:58:16 GMT -->
 
 </html>
