--- a/index.html
+++ b/index.html
@@ -162,24 +162,18 @@
                         <div class="type-5xl text-black">
                             <div data-delay="0" class="js-word-by-word leading-none">
                                 <div><span>We</span></div>
-                                <div><span>are</span></div>
-                                <div><span>designers,</span></div>
-                                <div><span>strategists,</span></div>
-                                <div><span>developers</span></div>
+                                <div><span>design,</span></div>
+                                <div><span>build,</span></div>
+                                <div><span>sell,</span></div>
+                                <div><span>rent</span></div>
                                 <div><span>and</span></div>
-                                <div><span>maintainers</span></div>
+                                <div><span>manage</span></div>
 
-                                <div><span>who</span></div>
-                                <div><span>all</span></div>
-                                <div><span>love</span></div>
-                                <div><span>clarity,</span></div>
-                                <div><span>and</span></div>
-                                <div><span>the</span></div>
-                                <div><span>conversations</span></div>
-                                <div><span>that</span></div>
-                                <div><span>take</span></div>
-                                <div><span>us</span></div>
-                                <div><span>there.</span></div>
+                                <div><span>beauitful</span></div>
+                                <div><span>homes</span></div>
+                                <div><span>in</span></div>
+                                <div><span>Switzerland.</span></div>
+
 
                             </div>
                         </div>
@@ -198,7 +192,7 @@
                             <div class="ml-16 lg:ml-22">
                                 <div class="relative">
                                     <button class="navigation-open__btn  navigation-open__btn--hero-header  flex items-center focus:outline-none relative z-30 text-black border-black">
-      <span class="navigation-open__icon mr-5  bg-black "></span>
+      <span class="navigation-open__icon mr-5  bg-black "></span>+
       <span class="navigation-open__text block type-xs text-black uppercase tracking-widest">Menu</span>
     </button>
                                 </div>
@@ -482,7 +476,7 @@
                                     <h3 class="hidden md:block type-xl">
                                         <a href="latest/the-home-of-thursday.html">
       The home of Euphorie AG
-      
+
       </a>
                                     </h3>
                                     <h3 class="block md:hidden type-lg">
