--- a/projects/villa.html
+++ b/projects/villa.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Bailey | Thursday">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="sandstrasse.html">
+    <meta property="og:url" content="villa.html">
     <meta property="og:image" content="../assets/img/resized/opengraph/1623663389-logo-green.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="../apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
@@ -147,16 +147,16 @@
 
                     <p><strong>Parzelle Nummer:</strong><br>
                         <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                    Grundbuch Beinwil am See,<br> 
-                    Parzelle 2114</span></p><br>
+                    Grundbuch Reinach AG,<br> 
+                    Parzelle 1447</span></p><br>
 
                     <p><strong>Grundstücksfläche:</strong><br>
                         <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                  2‘666 m2 (26,66 Aren)</span></p><br>
+                            1‘386 m2 (13,86 Aren)</span></p><br>
 
                     <p><strong>Projektierung:</strong><br>
                         <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
-                2016 – 2017</span></p><br>
+                2015 – 2016</span></p><br>
 
 
 
@@ -171,27 +171,20 @@
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/indoors01.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/villa/02.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/villa/02.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/villa/02.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/indoors02.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/villa/03.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/villa/03.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/villa/03.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
-        <section class="container site-section fade-in">
 
-            <picture>
-                <source srcset="../assets/img/projects/sandstrasse/indoors03.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/indoors03.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/indoors03.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
         <section class="container-3xl--right site-section--narrow cms-copy fade-in">
             <h2 class="p1"><span class="s1">DESIGN + ARCHITECTURE</span></h2>
             <p class="p1"><span class="s1">Themes of British Heritage and Triumph were explored in conceptual territories, as well as the chosen route of Family Values. This lead to the brand essence - the answer to ‘Why Bailey?’ - of Stronger Together, the promise of ongoing customer partnerships that was unique to this family business. With brand values and personality defined, in easy-to-remember-and-act-on sets of three, it was simple for the client to roll it out internally so everyone understood the new company vision.<span class="Apple-converted-space"> </span></span>
@@ -203,25 +196,25 @@
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/villa/04.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/villa/04.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full " alt="Logo green">
+                <source srcset="../assets/img/projects/villa/05.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/villa/05.jpg" media="(min-width: 640px)">
+                <img src="../assets/img/projects/villa/05.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
 
@@ -240,9 +233,9 @@
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 10% 10%;">
 
                                 <picture>
-                                    <source srcset="../assets/img/projects/sandstrasse/bp01.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/sandstrasse/bp01.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/sandstrasse/bp01.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp1.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp1.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp1.jpg" class="w-full " alt="Logo green">
                                 </picture>
 
                             </div>
@@ -250,27 +243,27 @@
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/sandstrasse/bp02.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/sandstrasse/bp02.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/sandstrasse/bp02.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp02.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp02.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp02.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/sandstrasse/bp03.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/sandstrasse/bp03.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/sandstrasse/bp03.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp03.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp03.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp03.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/sandstrasse/bp04.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/sandstrasse/bp04.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/sandstrasse/bp04.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp04.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp04.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp04.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
