--- a/projects/villa.html
+++ b/projects/villa.html
@@ -201,14 +201,7 @@
                 <img src="../assets/img/projects/villa/04.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
-        <section class="container site-section fade-in">
 
-            <picture>
-                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/villa/04.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/villa/04.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
         <section class="container site-section fade-in">
 
             <picture>
@@ -222,9 +215,7 @@
             <h2 class="p1"><span class="s1">WEB DESIGN + BUILD</span></h2>
             <p class="p1"><span class="s1">Although not an e-commerce site, the complicated combinations of products and variants needed to be made accessible and attractive to Bailey’s customers. We provided numerous solutions to solve the challenges of how such a diverse and overlapping range could be organised and displayed. This raised questions that ultimately helped Bailey streamline their business. With the user’s needs first and foremost, we designed a really clear way to navigate a complicated world of roof tiles and gutters, that was nonetheless visually appealing. It all came together strongly and beautifully and the client had not one amend to make to the original design. The visual brand language, of open white spaces making it a clean and clear experience, and the graphic blocks applied to transitions and image crops, resulted in a site that was both functional and full of authentic personality.</span></p>
         </section>
-        <section class="container-3xl--right site-section--narrow cms-copy fade-in">
-            <h2><a href="https://www.builtwithbailey.com/en" target="_blank" rel="noopener noreferrer">view website</a></h2>
-        </section>
+
         <section class="container site-section fade-in">
             <full-width-slider inline-template>
                 <div class="js-full-width-slider swiper-container w-full relative">
@@ -243,27 +234,27 @@
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp02.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp02.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp02.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp2.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp2.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp2.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp03.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp03.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp03.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp3.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp3.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp3.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="bflex items-center justify-center" style="background: #2A2A2A; padding: 21% 17%;">
                                 <picture>
-                                    <source srcset="../assets/img/projects/villa/bp04.jpg" media="(min-width: 1200px)">
-                                    <source srcset="../assets/img/projects/villa/bp04.jpg" media="(min-width: 640px)">
-                                    <img src="../assets/img/projects/villa/bp04.jpg" class="w-full " alt="Logo green">
+                                    <source srcset="../assets/img/projects/villa/bp4.jpg" media="(min-width: 1200px)">
+                                    <source srcset="../assets/img/projects/villa/bp4.jpg" media="(min-width: 640px)">
+                                    <img src="../assets/img/projects/villa/bp4.jpg" class="w-full " alt="Logo green">
                                 </picture>
                             </div>
                         </div>
@@ -290,60 +281,45 @@
             <ul class="border-b border-grey-450 mt-12 md:mt-24">
                 <li class="border-t border-grey-450 py-5 md:py-8">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/somebody-pres-r2-v10-01.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/somebody-pres-r2-v10-01.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="somebody.html">
-                            <span class="text-black">Somebody</span>
-                            <span class="flex-shrink-0 ml-8">View Project</span>
+                        <a class="type-base flex justify-between" href="">
+                            <span class="text-black">Villa Hauptstrausse</span>
+                            <span class="flex-shrink-0 ml-8">This Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/posters-close.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/posters-close.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="a2b.html">
-                            <span class="text-black">A2B</span>
+                        <a class="type-base flex justify-between" href="sandstrasse.html">
+                            <span class="text-black">Sandstrasse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/tags.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/tags.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="meet-bernard.html">
-                            <span class="text-black">Meet Bernard</span>
+                        <a class="type-base flex justify-between" href="#">
+                            <span class="text-black">Rebstockhalde</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/spirit.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/spirit.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="tipsy-cow.html">
+                        <a class="type-base flex justify-between" href="#">
                             <span class="text-black">Tipsy Cow</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
-                <li class="border-t border-grey-450 py-5 md:py-8">
+                <a class="type-base flex justify-between" href="#">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/bigposter.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/bigposter.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="nosh.html">
+                        <a class="type-base flex justify-between" href="#">
                             <span class="text-black">NOSH</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
-                    </tooltip>
+                </tooltip>
                 </li>
-                <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/walking.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/walking.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="winchester-college.html">
-                            <span class="text-black">Winchester College</span>
-                            <span class="flex-shrink-0 ml-8">View Project</span>
-                        </a>
-                    </tooltip>
-                </li>
-                <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/thegrange-casestudy-v10-thegrange-1-8.png' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/thegrange-casestudy-v10-thegrange-1-8.png 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="the-grange.html">
-                            <span class="text-black">The Grange</span>
-                            <span class="flex-shrink-0 ml-8">View Project</span>
-                        </a>
-                    </tooltip>
-                </li>
+
             </ul>
         </div>
 
