--- a/projects/villa.html
+++ b/projects/villa.html
@@ -312,10 +312,9 @@
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <a class="type-base flex justify-between" href="#">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/villa/01.jpg' srcset='../assets/img/projects/villa/01.jpg 2x'>" inline-template>
                         <a class="type-base flex justify-between" href="#">
-                            <span class="text-black">NOSH</span>
+                            <span class="text-black">Tipsy Cow</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
